# Prepwise

./: MCP_TEST.md  README.md
backend/: .env.example  .gitignore  alembic.ini  docker-compose.yml  logging.conf  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 850ff77ba982_added_a_source_column.py  a160249ad993_initial_schema.py  cf22af15ca08_restructure_schema_to_new_architecture.py
backend/app/: main.py
backend/app/agents/graph/: document_graph.py  job_search_graph.py  job_tracker_graph.py  prep_graph.py  profile_graph.py  roadmap_graph.py
backend/app/agents/prompts/: classification.py  compression.py  document_prompts.py  job_search_context_prompts.py  (+6 more)
backend/app/classification/: classifier.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: redis.py  session.py
backend/app/llm/: cache.py  client.py  router.py
backend/app/profile/: extractor.py  indexer.py  normaliser.py
backend/app/repositories/: auth_repository.py  document_repository.py  job_repository.py  prep_repository.py  profile_repository.py  session_repository.py  user_repository.py
backend/app/routes/: auth.py  documents.py  jobs.py  prep.py  profile.py  tracker.py  websocket.py
backend/app/schemas/: auth.py  classification.py  documents.py  jobs.py  prep.py  profile.py  tracker.py  websocket.py
backend/app/services/: auth_service.py  document_service.py  job_service.py  prep_service.py  profile_service.py  tracker_service.py
backend/app/vector/: chunks.py  embeddings.py  qdrant_client.py
backend/app/websocket/: dispatch.py  handler.py  manager.py  pubsub.py
backend/docs/: architecture.md  auth.md  database.md  document-engine.md  job-engine.md  prep-engine.md  shared-infrastructure.md  tracker-engine.md
backend/scripts/: create_user.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py  test_dispatch.py  test_profile.py  test_websocket.py
backend/tests/runtime/: wscat_test.py
backend/tests/unit/: test_chunks.py  test_classifier.py  test_extractor.py  test_manager.py  test_pubsub.py  test_security.py
(+30 files in other folders)
