[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.109.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.137.1",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "sse-starlette>=3.4.4",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
]
