[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.109.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.137.1",
    "google-search-results>=2.4.2",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "redis[asyncio]>=8.0.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "sse-starlette>=3.4.4",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.49.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary,pool]>=3.3.4",
    "pypdf>=6.14.2",
    "docx>=0.2.4",
    "pytest>=9.1.1",
    "httpx-ws>=0.9.0",
    "anyio[asyncio]>=4.14.0",
    "pytest-asyncio>=1.4.0",
    "python-docx>=1.2.0",
    "asgi-lifespan>=2.1.0",
]
